add h2, p, img to index and classes: h2.intro, p.intro, img.intro to css.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 	</head>
 
 	<body>
-			<h2 class="intro">The Really Boring Stuff</h2>
+    <h1>Boring Stuff</h1>
+			<h2 class="intro">Really Boring things.</h2>
 
-  			<img src="img/clothes-ironing.jpg" class="intro" alt="A man doing a boring thing.">
+       <h3 class="intro">1. clothes-ironing.</h3>
+  			<img src="img/clothes-ironing.png" class="intro" alt="A man doing a boring thing.">
 
-  			<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  			<p>Clothes-ironing is so boring. Just boring, <strong>especially after doing it for about 10 minutes.</strong></p>
 
-  		  <p class="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  		  <p class="intro">Share Ideas! What is your opinion? Share your boring stuff with us!</p>
 	</body>
 </html>
