add another h3, p, and photo.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <h1>Boring Stuff</h1>
 			<h2 class="intro">Really Boring things.</h2>
 
-       <h3 class="intro">1. clothes-ironing.</h3>
-  			<img src="img/clothes-ironing.png" class="intro" alt="A man doing a boring thing.">
-
+       <h3 class="intro">1. clothes ironing.</h3>
+  		  <img src="img/clothes-ironing.png" class="intro" alt="A man digging a hole.">
   			<p>Clothes-ironing is so boring. Just boring, <strong>especially after doing it for about 10 minutes.</strong></p>
+
+			 <h3 class="intro">2. digging a hole.</h3>
+        <img src="img/digging-a-hole.jpg" class="intro" alt="A man doing a boring thing.">
+				<p>Digging holes in the ground is so boring. Hard & boring, <strong>especially under bad weather conditions.</strong></p>
 
   		  <p class="intro">Share Ideas! What is your opinion? Share your boring stuff with us!</p>
 	</body>
