--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <html>
 	<head>
   		<link href="css/styles.css" rel="stylesheet"type="text/css" >
-  		<title>Boring Stuff!</title>
+  		<title>Boring Stuff</title>
 	</head>
 
 	<body>
-    <h1>Boring Stuff</h1>
+    <h1>Boring Stuff!</h1>
+
 			<h2 class="intro">Really Boring things.</h2>
 
-       <h3 class="intro">1. clothes ironing.</h3>
-  		  <img src="img/clothes-ironing.png" class="intro" alt="A man digging a hole.">
-  			<p>Clothes-ironing is so boring. Just boring, <strong>especially after doing it for about 10 minutes.</strong></p>
-
-			 <h3 class="intro">2. digging a hole.</h3>
-        <img src="img/digging-a-hole.jpg" class="intro" alt="A man doing a boring thing.">
-				<p>Digging holes in the ground is so boring. Hard & boring, <strong>especially under bad weather conditions.</strong></p>
-
-  		  <p class="intro">Share Ideas! What is your opinion? Share your boring stuff with us!</p>
+      <div class="important">
+        <h3>1. clothes ironing.</h3>
+  		  <img src="img/clothes-ironing.png" alt="A man ironing clothes-ironing.">
+  			<p>Clothes-ironing is so boring. Just boring, <span class="special">especially</span>  after doing it for about 10 minutes.</p>
+			</div>
+      <div class="unimportant">
+			  <h3>2. digging a hole.</h3>
+        <img src="img/digging-a-hole.jpg" alt="A man doing a boring thing.">
+				<p>Digging holes in the ground is so boring. Hard & boring, <span class="special">especially</span> under bad weather conditions.</p>
+      </div>
+  		  <p class="share">Share Ideas! What is your opinion? Share your boring stuff with us!</p>
 	</body>
 </html>
