--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-  		<link href="css/styles.css" rel="stylesheet"type="text/css" >
+			<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+			<link href="css/styles.css" rel="stylesheet" type="text/css">
+			<script src="js/jquery-3.3.1.js"></script>
+			<script src="js/scripts.js"></script>
   		<title>Boring Stuff</title>
 	</head>
 
@@ -21,5 +24,7 @@
 				<p>Digging holes in the ground is so boring. Hard & boring, <span class="special">especially</span> under bad weather conditions.</p>
       </div>
   		  <p class="share">Share Ideas! What is your opinion? Share your boring stuff with us!</p>
+         <input type="text" id="text">
+
 	</body>
 </html>
